# substrait-dataframe

./: .gitignore  README.md  comparison.py  datafusion_ex.py  ex.py  example.py  get_plan.py  get_substrait.py  pyproject.toml  test.py
datafusion-example/: Cargo.toml
datafusion-example/src/: main.rs
src/substrait_dataframe/: __init__.py  backend.py  dataframe.py  expression.py  extensions.py  field.py  relation.py
src/substrait_dataframe/backends/: __init__.py  backend.py  datafusion.py  duckdb.py
testing/: consume_duckdb_in_datafusion.py  produce_datafusion.py  produce_duckdb.py  produce_substrait_dataframe.py
testing/produced/datafusion/: select-island-species-from-penguins.sql.json  select-species-from-penguins-where-island-equal-dream-limit-10.sql.json  select-species-from-penguins-where-island-equal-dream.sql.json  select-species-from-penguins.sql.json  select-star-from-penguins-limit-ten.sql.json  select-star-from-penguins.sql.json
testing/produced/duckdb/: select-island-species-from-penguins.sql.json  select-species-from-penguins-where-island-equal-dream-limit-10.sql.json  select-species-from-penguins-where-island-equal-dream.sql.json  (+3 more)
testing/queries/: select-island-species-from-penguins.sql  select-species-from-penguins-where-island-equal-dream-limit-10.sql  select-species-from-penguins-where-island-equal-dream.sql  select-species-from-penguins.sql  select-star-from-penguins.sql
tests/: conftest.py  test_dataframe.py  test_execute.py  test_fields.py
tools/: dump_substrait.py  generate_example_plans.py  select-island-from-penguins.json  select-species-from-penguins-where-island-dream.json  select-star-from-penguins.json
(+5 files in other folders)
