[project]
name = "substrait-dataframe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bryce Mecum", email = "petridish@gmail.com" }
]
requires-python = ">=3.13"
dependencies = ["duckdb", "substrait", "pytest"]

[project.scripts]
substrait-dataframe = "substrait_dataframe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
