[project]
name = "substrait-dataframe"
version = "0.1.0"
description = "Example DataFrame library that produces Substrait"
readme = "README.md"
authors = [{ name = "Bryce Mecum", email = "brycemecum@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["pandas", "pyarrow", "substrait"]

[project.optional-dependencies]
duckdb = [ "duckdb"]
datafusion = ["datafusion"]
all = [ "duckdb", "datafusion" ]
testing = [
  "datafusion",
  "pytest",
]

[project.scripts]
substrait-dataframe = "substrait_dataframe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
